# drawing_hands

./: .gitignore  .lines.txt.swp  Cargo.toml  README.md  lines.txt  lines.txt.out
src/: content.rs  main.rs
