[package]
name = "drawing_hands"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ab_glyph = "0.2.19"
ab_glyph_rasterizer = "0.1.8"
bitvec = "1.0.1"
chrono = "0.4.37"
clap = { version = "4.5.2", features = ["derive"] }
glam = "0.25.0"
image = "0.24.5"
lazy_static = "1.4.0"
nom = "7.1.3"
static_assertions = "1.1.0"
ttf-parser = "0.18.1"
